# rustdesk_server

./: .gitignore  Cargo.toml  server_address.json
api_server/hbba/: Cargo.toml
api_server/hbba-ui/: Cargo.toml  README.md  env.sh  index.html
api_server/hbba-ui/src/: help.rs  lib.rs  user.rs  utils.rs
api_server/hbba/src/: main.rs
api_server/hbba/src/server/: address_book.rs  jwt.rs  manage.rs  mod.rs  user.rs
database/: Cargo.toml
database/migrations/: 20220616082855_create_table_peer.down.sql  20220616082855_create_table_peer.up.sql  20220629024435_create_table_user_and_address_book.down.sql  20220629024435_create_table_user_and_address_book.up.sql
database/src/: lib.rs  models.rs
database/src/models/: mod.rs  peer.rs  user.rs
relay_server/: Cargo.toml
relay_server/src/: main.rs  relay_server.rs
rendezvous_server/: Cargo.toml
rendezvous_server/src/: main.rs  tcp_server.rs  test_nat_server.rs  udp_server.rs
