[workspace]
members = ["database", "rendezvous_server", "relay_server", "api_server/*"]

[workspace.dependencies]
hbb_common = { git = "https://github.com/rustdesk/rustdesk", rev = "9117d69" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
database = { version = "0.1.0", path = "database" }

[profile.release]
lto = true
codegen-units = 1
strip = true
