[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
peer = []
user = ["dep:serde", "dep:chrono", "sqlx/json"]

[dependencies]
chrono = { workspace = true, features = ["serde"], optional = true }
serde = { version = "1.0.137", features = ["derive"], optional = true }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
