[package]
name = "hbbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hbb_common = { workspace = true }
async-speed-limit = "0.4.0"
clap = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
byte-unit = "4.0.14"
