[package]
name = "hbbs"
version = "0.1.0"
edition = "2021"
authors = ["ZB_陈 <949536395@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }

hbb_common = { git = "https://github.com/rustdesk/rustdesk", rev = "c1bad84a86ce26334ca7e47d0ac2dd21b7c5ad8f" }

chrono = "0.4.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
clap = { version = "3.2.6", features = ["derive"] }
