[package]
name = "hbbs"
version = "0.1.0"
edition = "2021"
authors = ["ZB_陈 <949536395@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { workspace = true, features = ["peer"] }

hbb_common = { workspace = true }

chrono = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
