[package]
name = "hbba-ui"
version = "0.1.0"
authors = ["ZB_陈 <949536395@qq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
log = ["dep:tracing", "dep:tracing-wasm", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
console_error_panic_hook = { version = "0.1.7", optional = true }
eframe = { version = "0.20", default_features = false, features = ["glow"] }
once_cell = "1.9.0"
crossbeam-channel = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
reqwasm = { version = "0.5", default_features = false, features = ["json", "http"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
tracing-wasm = { version = "0.2.1", optional = true }
tracing = { workspace = true, optional = true }
